Fixed assets not showing

--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -26,7 +26,3 @@
     width: 70%;
   }
 }
-
-.content__title {
-  margin-bottom: 1em;
-}
